force-app/main/default/objects/CTP_CaseTypeMapping__c/CTP_CaseTypeMapping__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Custom setting to store Case Type and its field mapping</description>
    <label>CaseTypeMapping</label>
</CustomObject>