force-app/main/default/objects/CTP_CaseTypeMapping__c/fields/CTP_Origin__c.field-meta.xml
<CustomField>
    <fullName>CTP_Origin__c</fullName>
    <description>Field to store origin value</description>
    <label>Origin</label>
    <length>255</length>
    <type>Text</type>
</CustomField>