force-app/main/default/objects/CTP_CaseTypeMapping__c/fields/CTP_Priority__c.field-meta.xml
<CustomField>
    <fullName>CTP_Priority__c</fullName>
    <description>Field to store priority value</description>
    <label>Priority</label>
    <length>255</length>
    <type>Text</type>
</CustomField>