force-app/main/default/objects/CTP_CaseTypeMapping__c/fields/CTP_RecordType__c.field-meta.xml
<CustomField>
    <fullName>CTP_RecordType__c</fullName>
    <description>Field to store record type of case</description>
    <label>RecordType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>