force-app/main/default/objects/CTP_CaseTypeMapping__c/fields/CTP_Status__c.field-meta.xml
<CustomField>
    <fullName>CTP_Status__c</fullName>
    <description>Field to store Feedback Status</description>
    <label>Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>